# loom

./: .gitignore  DESIGN.md  README.md  program.py  program_v2.py  pyproject.toml
ci/: check_filesize.py  check_imports.py  check_test_coverage.py  run_all.sh
docs/: api.md  design.md  quickstart.md  stop_hook_backend_design.md
docs/superpowers/plans/: 2026-03-26-orchestration-language.md
docs/superpowers/specs/: 2026-03-26-orchestration-language-design.md
examples/: autoresearch.py
scripts/: loom-run
skills/auto/: SKILL.md
skills/auto/references/: program-guide.md
skills/loom/: SKILL.md
skills/loom/references/: program-guide.md
src/auto/: __init__.py  agents.py  cli.py  core.py  step.py
src/auto/hooks/: stop-hook.sh
src/loom/: __init__.py  cli.py  state.py  step.py
tests/: test_adversarial.py  test_agents.py  test_cli.py  test_cli_logging.py  test_core.py  test_e2e_program.py  test_e2e_v2.py  test_integration.py  test_state.py  test_step.py
