[project]
name = "loom-agent"
version = "0.1.0"
description = "A single primitive for self-controlling agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "opencode-agent-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
