[project]
name = "loom-agent"
version = "0.1.0"
description = "A single primitive for self-controlling agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx",
]

[project.scripts]
loom-run = "loom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
