[project]
name = "auto-agent"
version = "0.1.0"
description = "A single primitive for self-controlling agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
auto-run = "auto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
